--- a/Problem_2.ipynb
+++ b/Problem_2.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from lib.mlp.fully_conn import *\n",
     "from lib.mlp.layer_utils import *\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +251,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dimg Error:  1.0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (4,4,3,12) (4,3,12,4) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 26\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdimg Error: \u001b[39m\u001b[39m\"\u001b[39m, rel_error(dimg_num, dimg))\n\u001b[0;32m     25\u001b[0m \u001b[39m# The errors should be around 1e-8\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdw Error: \u001b[39m\u001b[39m\"\u001b[39m, rel_error(dw_num, dw))\n\u001b[0;32m     27\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdb Error: \u001b[39m\u001b[39m\"\u001b[39m, rel_error(db_num, db))\n\u001b[0;32m     28\u001b[0m \u001b[39m# The shapes should be same\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\grad_check.py:12\u001b[0m, in \u001b[0;36mrel_error\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrel_error\u001b[39m(x, y):\n\u001b[0;32m     11\u001b[0m     \u001b[39m\"\"\" returns relative error \"\"\"\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mmax(np\u001b[39m.\u001b[39mabs(x \u001b[39m-\u001b[39;49m y) \u001b[39m/\u001b[39m (np\u001b[39m.\u001b[39mmaximum(\u001b[39m1e-8\u001b[39m, np\u001b[39m.\u001b[39mabs(x) \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mabs(y))))\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,4,3,12) (4,3,12,4) "
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
