--- a/Problem_1.ipynb
+++ b/Problem_1.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from lib.mlp.fully_conn import *\n",
     "from lib.mlp.layer_utils import *\n",
@@ -539,25 +548,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing initialization ... \n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "First layer weights do not seem right",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 28\u001b[0m\n\u001b[0;32m     23\u001b[0m b2 \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mnet\u001b[39m.\u001b[39mget_params(\u001b[39m\"\u001b[39m\u001b[39mfc3_b\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mstd()\n\u001b[0;32m     24\u001b[0m \u001b[39m###################################################\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[39m#                END OF YOUR CODE                 #\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[39m###################################################\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m \u001b[39massert\u001b[39;00m w1_std \u001b[39m<\u001b[39m std \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFirst layer weights do not seem right\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     29\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mall(b1 \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m), \u001b[39m\"\u001b[39m\u001b[39mFirst layer biases do not seem right\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     30\u001b[0m \u001b[39massert\u001b[39;00m w2_std \u001b[39m<\u001b[39m std \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mSecond layer weights do not seem right\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: First layer weights do not seem right"
+      "Testing initialization ... \n",
+      "Passed!\n",
+      "Testing test-time forward pass ... \n",
+      "Passed!\n",
+      "Testing the loss ...\n",
+      "Passed!\n",
+      "Testing the gradients (error should be no larger than 1e-6) ...\n",
+      "fc2_b relative error: 1.19e-08\n",
+      "fc2_w relative error: 3.53e-08\n",
+      "fc3_b relative error: 4.01e-10\n",
+      "fc3_w relative error: 2.50e-08\n"
      ]
     }
    ],
