--- a/Problem_2.ipynb
+++ b/Problem_2.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -251,26 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dimg Error:  1.0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (4,4,3,12) (4,3,12,4) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 26\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdimg Error: \u001b[39m\u001b[39m\"\u001b[39m, rel_error(dimg_num, dimg))\n\u001b[0;32m     25\u001b[0m \u001b[39m# The errors should be around 1e-8\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdw Error: \u001b[39m\u001b[39m\"\u001b[39m, rel_error(dw_num, dw))\n\u001b[0;32m     27\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdb Error: \u001b[39m\u001b[39m\"\u001b[39m, rel_error(db_num, db))\n\u001b[0;32m     28\u001b[0m \u001b[39m# The shapes should be same\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\grad_check.py:12\u001b[0m, in \u001b[0;36mrel_error\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrel_error\u001b[39m(x, y):\n\u001b[0;32m     11\u001b[0m     \u001b[39m\"\"\" returns relative error \"\"\"\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mmax(np\u001b[39m.\u001b[39mabs(x \u001b[39m-\u001b[39;49m y) \u001b[39m/\u001b[39m (np\u001b[39m.\u001b[39mmaximum(\u001b[39m1e-8\u001b[39m, np\u001b[39m.\u001b[39mabs(x) \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mabs(y))))\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,4,3,12) (4,3,12,4) "
+      "dimg Error:  2.575113715865389e-06\n",
+      "dw Error:  4.378179669192709e-09\n",
+      "db Error:  4.7258258753045955e-11\n",
+      "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
      ]
     }
    ],
@@ -413,9 +404,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Passed!\n",
+      "Testing test-time forward pass ... \n",
+      "(4, 27)\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Your implementation might be wrong!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[73], line 59\u001b[0m\n\u001b[0;32m     54\u001b[0m correct_scores \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray([[\u001b[39m-\u001b[39m\u001b[39m13.85107294\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m11.52845818\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m9.20584342\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m6.88322866\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m4.5606139\u001b[39m ],\n\u001b[0;32m     55\u001b[0m  [\u001b[39m-\u001b[39m\u001b[39m11.44514171\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m10.21200524\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.97886878\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m7.74573231\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m6.51259584\u001b[39m],\n\u001b[0;32m     56\u001b[0m  [ \u001b[39m-\u001b[39m\u001b[39m9.03921048\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m8.89555231\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.75189413\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.60823596\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m8.46457778\u001b[39m],\n\u001b[0;32m     57\u001b[0m  [ \u001b[39m-\u001b[39m\u001b[39m6.63327925\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m7.57909937\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.52491949\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m9.4707396\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m10.41655972\u001b[39m]])\n\u001b[0;32m     58\u001b[0m scores_diff \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(np\u001b[39m.\u001b[39mabs(scores \u001b[39m-\u001b[39m correct_scores))\n\u001b[1;32m---> 59\u001b[0m \u001b[39massert\u001b[39;00m scores_diff \u001b[39m<\u001b[39m \u001b[39m1e-6\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mYour implementation might be wrong!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     60\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mPassed!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     62\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mTesting the loss ...\u001b[39m\u001b[39m\"\u001b[39m,)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Your implementation might be wrong!"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -437,10 +450,10 @@
     "###################################################\n",
     "# TODO: param_name should be replaced accordingly  #\n",
     "###################################################\n",
-    "w1_std = abs(model.net.get_params(\"param_name_w\").std() - std)\n",
-    "b1 = model.net.get_params(\"param_name_b\").std()\n",
-    "w2_std = abs(model.net.get_params(\"param_name_w\").std() - std)\n",
-    "b2 = model.net.get_params(\"param_name_b\").std()\n",
+    "w1_std = abs(model.net.get_params(\"conv1_w\").std() - std)\n",
+    "b1 = model.net.get_params(\"conv1_b\").std()\n",
+    "w2_std = abs(model.net.get_params(\"fc1_w\").std() - std)\n",
+    "b2 = model.net.get_params(\"fc1_b\").std()\n",
     "###################################################\n",
     "#                END OF YOUR CODE                 #\n",
     "###################################################\n",
@@ -460,10 +473,10 @@
     "###################################################\n",
     "# TODO: param_name should be replaced accordingly  #\n",
     "###################################################\n",
-    "model.net.assign(\"param_name_w\", w1)\n",
-    "model.net.assign(\"param_name_b\", b1)\n",
-    "model.net.assign(\"param_name_w\", w2)\n",
-    "model.net.assign(\"param_name_b\", b2)\n",
+    "model.net.assign(\"conv1_w\", w1)\n",
+    "model.net.assign(\"conv1_b\", b1)\n",
+    "model.net.assign(\"fc1_w\", w2)\n",
+    "model.net.assign(\"fc1_b\", b2)\n",
     "###################################################\n",
     "#                END OF YOUR CODE                 #\n",
     "###################################################\n",
@@ -516,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,9 +543,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (40000, 32, 32, 3)\n",
+      "Flattened data input size: 3072\n",
+      "Number of data classes: 20\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Data shape:\", data_dict[\"data_train\"][0].shape)\n",
     "print(\"Flattened data input size:\", np.prod(data[\"data_train\"].shape[1:]))\n",
@@ -541,9 +564,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/400 [00:01<08:03,  1.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 6000) Average loss: 2.983349422110791\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 400/400 [07:02<00:00,  1.06s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Epoch 1 / 15) Training Accuracy: 0.19975, Validation Accuracy: 0.1895\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  8%|▊         | 34/400 [00:36<06:33,  1.08s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3442, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\amant\\AppData\\Local\\Temp\\ipykernel_10620\\4127592479.py\", line 25, in <module>\n",
+      "    results = train_net(data_dict, model, loss_f, optimizer, batch_size, epochs,\n",
+      "  File \"c:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\mlp\\train.py\", line 172, in train_net\n",
+      "    model.backward(d_loss, regularization=regularization)\n",
+      "  File \"c:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\mlp\\fully_conn.py\", line 26, in backward\n",
+      "    dprev = layer.backward(dprev)\n",
+      "  File \"c:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\cnn\\layer_utils.py\", line 446, in backward\n",
+      "    max_in = np.unravel_index(np.argmax(pool_window), pool_window.shape)\n",
+      "  File \"<__array_function__ internals>\", line 180, in argmax\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 1216, in argmax\n",
+      "    return _wrapfunc(a, 'argmax', axis=axis, out=out, **kwds)\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 57, in _wrapfunc\n",
+      "    return bound(*args, **kwds)\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2057, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"c:\\Users\\amant\\anaconda3\\envs\\DL\\lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -561,11 +682,11 @@
     "#############################################################################\n",
     "optimizer = Adam(model.net, 1e-3)\n",
     "\n",
-    "batch_size = 10\n",
-    "epochs = 5\n",
+    "batch_size = 50\n",
+    "epochs = 10\n",
     "lr_decay = .999\n",
-    "lr_decay_every = 10\n",
-    "regularization = \"none\"\n",
+    "lr_decay_every = 100\n",
+    "regularization = \"l2\"\n",
     "reg_lambda = 0.01\n",
     "#############################################################################\n",
     "#                             END OF YOUR CODE                              #\n",
@@ -584,9 +705,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[74], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mreload_ext\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mautoreload\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m opt_params, loss_hist, train_acc_hist, val_acc_hist \u001b[39m=\u001b[39m results\n\u001b[0;32m      5\u001b[0m \u001b[39m# Plot the learning curves\u001b[39;00m\n\u001b[0;32m      6\u001b[0m plt\u001b[39m.\u001b[39msubplot(\u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'results' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
