--- a/Problem_2.ipynb
+++ b/Problem_2.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lib.mlp.fully_conn import *\n",
     "from lib.mlp.layer_utils import *\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -413,19 +404,20 @@
      "text": [
       "Testing initialization ... \n",
       "Passed!\n",
-      "Testing test-time forward pass ... \n",
-      "(4, 27)\n"
+      "Testing test-time forward pass ... \n"
      ]
     },
     {
-     "ename": "AssertionError",
-     "evalue": "Your implementation might be wrong!",
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 81 into shape (30)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[73], line 59\u001b[0m\n\u001b[0;32m     54\u001b[0m correct_scores \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray([[\u001b[39m-\u001b[39m\u001b[39m13.85107294\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m11.52845818\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m9.20584342\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m6.88322866\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m4.5606139\u001b[39m ],\n\u001b[0;32m     55\u001b[0m  [\u001b[39m-\u001b[39m\u001b[39m11.44514171\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m10.21200524\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.97886878\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m7.74573231\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m6.51259584\u001b[39m],\n\u001b[0;32m     56\u001b[0m  [ \u001b[39m-\u001b[39m\u001b[39m9.03921048\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m8.89555231\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.75189413\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.60823596\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m8.46457778\u001b[39m],\n\u001b[0;32m     57\u001b[0m  [ \u001b[39m-\u001b[39m\u001b[39m6.63327925\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m7.57909937\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.52491949\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m9.4707396\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m10.41655972\u001b[39m]])\n\u001b[0;32m     58\u001b[0m scores_diff \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(np\u001b[39m.\u001b[39mabs(scores \u001b[39m-\u001b[39m correct_scores))\n\u001b[1;32m---> 59\u001b[0m \u001b[39massert\u001b[39;00m scores_diff \u001b[39m<\u001b[39m \u001b[39m1e-6\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mYour implementation might be wrong!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     60\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mPassed!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     62\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mTesting the loss ...\u001b[39m\u001b[39m\"\u001b[39m,)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Your implementation might be wrong!"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 53\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[39m###################################################\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[39m#                END OF YOUR CODE                 #\u001b[39;00m\n\u001b[0;32m     50\u001b[0m \u001b[39m###################################################\u001b[39;00m\n\u001b[0;32m     52\u001b[0m feats \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m-\u001b[39m\u001b[39m5.5\u001b[39m, \u001b[39m4.5\u001b[39m, num\u001b[39m=\u001b[39mB\u001b[39m*\u001b[39mH\u001b[39m*\u001b[39mW\u001b[39m*\u001b[39miC)\u001b[39m.\u001b[39mreshape(B,H,W,iC)\n\u001b[1;32m---> 53\u001b[0m scores \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mforward(feats)\n\u001b[0;32m     54\u001b[0m correct_scores \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray([[\u001b[39m-\u001b[39m\u001b[39m13.85107294\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m11.52845818\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m9.20584342\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m6.88322866\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m4.5606139\u001b[39m ],\n\u001b[0;32m     55\u001b[0m  [\u001b[39m-\u001b[39m\u001b[39m11.44514171\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m10.21200524\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.97886878\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m7.74573231\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m6.51259584\u001b[39m],\n\u001b[0;32m     56\u001b[0m  [ \u001b[39m-\u001b[39m\u001b[39m9.03921048\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m8.89555231\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.75189413\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.60823596\u001b[39m,  \u001b[39m-\u001b[39m\u001b[39m8.46457778\u001b[39m],\n\u001b[0;32m     57\u001b[0m  [ \u001b[39m-\u001b[39m\u001b[39m6.63327925\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m7.57909937\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m8.52491949\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m9.4707396\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m10.41655972\u001b[39m]])\n\u001b[0;32m     58\u001b[0m scores_diff \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(np\u001b[39m.\u001b[39mabs(scores \u001b[39m-\u001b[39m correct_scores))\n",
+      "File \u001b[1;32mc:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\mlp\\fully_conn.py:20\u001b[0m, in \u001b[0;36mModule.forward\u001b[1;34m(self, feat, is_training, seed)\u001b[0m\n\u001b[0;32m     18\u001b[0m         output \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39mforward(output, is_training, seed)\n\u001b[0;32m     19\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m         output \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39;49mforward(output)\n\u001b[0;32m     21\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnet\u001b[39m.\u001b[39mgather_params()\n\u001b[0;32m     22\u001b[0m \u001b[39mreturn\u001b[39;00m output\n",
+      "File \u001b[1;32mc:\\Users\\amant\\Projects\\DL\\CNN-NN\\lib\\cnn\\layer_utils.py:189\u001b[0m, in \u001b[0;36mConvLayer2D.forward\u001b[1;34m(self, img)\u001b[0m\n\u001b[0;32m    187\u001b[0m img_as_kern \u001b[39m=\u001b[39m img_as_kern\u001b[39m.\u001b[39mreshape(B,output_height,output_width,k,k,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_channels)\n\u001b[0;32m    188\u001b[0m img_as_kern \u001b[39m=\u001b[39m img_as_kern\u001b[39m.\u001b[39mreshape(B,output_height,output_width,k\u001b[39m*\u001b[39mk\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_channels)\n\u001b[1;32m--> 189\u001b[0m kernel \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparams[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mw_name]\u001b[39m.\u001b[39;49mreshape(\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m,\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnumber_filters)\n\u001b[0;32m    190\u001b[0m output \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39meinsum(\u001b[39m'\u001b[39m\u001b[39mbhwk,kc->bhwc\u001b[39m\u001b[39m'\u001b[39m, img_as_kern, kernel)\n\u001b[0;32m    191\u001b[0m output \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparams[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb_name]\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 81 into shape (30)"
      ]
     }
    ],
@@ -529,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,175 +556,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/800 [00:00<05:47,  2.30it/s]"
+      "  0%|          | 1/400 [00:01<07:35,  1.14s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Iteration 1 / 8000) Average loss: 2.9760634769440504\n"
+      "(Iteration 1 / 40000) Average loss: 2.9951841092883846\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 800/800 [05:52<00:00,  2.27it/s]\n"
+      "  5%|▌         | 21/400 [00:22<06:38,  1.05s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Epoch 1 / 10) Training Accuracy: 0.309725, Validation Accuracy: 0.2984\n"
+      "(Iteration 21 / 40000) Average loss: 2.970915878059546\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 800/800 [06:18<00:00,  2.11it/s]\n"
+      " 10%|█         | 41/400 [00:43<06:21,  1.06s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Epoch 2 / 10) Training Accuracy: 0.3559, Validation Accuracy: 0.3373\n"
+      "(Iteration 41 / 40000) Average loss: 2.9406345548363078\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 800/800 [06:12<00:00,  2.15it/s]\n"
+      " 15%|█▌        | 61/400 [01:05<06:00,  1.06s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Epoch 3 / 10) Training Accuracy: 0.37185, Validation Accuracy: 0.3435\n"
+      "(Iteration 61 / 40000) Average loss: 2.888388734748253\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 800/800 [05:52<00:00,  2.27it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 4 / 10) Training Accuracy: 0.3824, Validation Accuracy: 0.3553\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 800/800 [05:34<00:00,  2.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 5 / 10) Training Accuracy: 0.382875, Validation Accuracy: 0.3467\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 1/800 [00:00<05:45,  2.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Iteration 4001 / 8000) Average loss: 2.2159580139316657\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 800/800 [05:57<00:00,  2.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 6 / 10) Training Accuracy: 0.399925, Validation Accuracy: 0.3634\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 800/800 [06:08<00:00,  2.17it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 7 / 10) Training Accuracy: 0.40265, Validation Accuracy: 0.3621\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 800/800 [06:08<00:00,  2.17it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 8 / 10) Training Accuracy: 0.405075, Validation Accuracy: 0.3555\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 800/800 [06:38<00:00,  2.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 9 / 10) Training Accuracy: 0.40935, Validation Accuracy: 0.3622\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 800/800 [05:59<00:00,  2.22it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Epoch 10 / 10) Training Accuracy: 0.419525, Validation Accuracy: 0.3681\n"
+      " 18%|█▊        | 70/400 [01:14<05:51,  1.07s/it]"
      ]
     }
    ],
@@ -751,19 +638,19 @@
     "# TODO: Use the train_net function you completed to train a network         #\n",
     "# You may only adjust the hyperparameters within this block                 #\n",
     "#############################################################################\n",
-    "optimizer = Adam(model.net, 1e-3)\n",
+    "optimizer = Adam(model.net, 1e-3, 1e-6)\n",
     "\n",
-    "batch_size = 50\n",
-    "epochs = 10\n",
-    "lr_decay = .999\n",
-    "lr_decay_every = 100\n",
+    "batch_size = 100\n",
+    "epochs = 100\n",
+    "lr_decay = .98\n",
+    "lr_decay_every = 1\n",
     "regularization = \"l2\"\n",
     "reg_lambda = 0.01\n",
     "#############################################################################\n",
     "#                             END OF YOUR CODE                              #\n",
     "#############################################################################\n",
     "results = train_net(data_dict, model, loss_f, optimizer, batch_size, epochs, \n",
-    "                    lr_decay, lr_decay_every, show_every=4000, verbose=True, regularization=regularization, reg_lambda=reg_lambda)\n",
+    "                    lr_decay, lr_decay_every, show_every=20, verbose=True, regularization=regularization, reg_lambda=reg_lambda)\n",
     "opt_params, loss_hist, train_acc_hist, val_acc_hist = results"
    ]
   },
